# test-version-repo

./: main.py  pyproject.toml  useless.txt
.github/workflows/: auto-version-bump copy.yml  auto-version-bump.yml
scripts/: bump_version.py  increment_version.py
