[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Biraj <biraj.patel@getadapt.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9 <3.12"
realtime-client = {path = "../code/realtime-client", extras = ["all"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
